More work on resolution process